# quadmpcc

./: README.md
C++/: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md  docker_build.sh  docker_run.sh  gitman.yml  install.sh  install_deps_m1.sh  main.cpp  verify_hash_check.sh
C++/ADCodeGen/: CMakeLists.txt  ad_dynamics.cpp  ad_dynamics.h  main.cpp
C++/Config/: config.h  params.cpp  params.h  track.cpp  track.h  types.cpp  types.h
C++/Constraints/: bounds.cpp  bounds.h  constraints.cpp  constraints.h  soft_constraints.cpp  soft_constraints.h
C++/Cost/: cost.cpp  cost.h
C++/Interfaces/: hpipm_interface.cpp  hpipm_interface.h  solver_interface.cpp  solver_interface.h
C++/MPC/: mpc.cpp  mpc.h
C++/Model/: integrator.cpp  integrator.h  model.cpp  model.h
C++/Params/: bounds.json  config.json  cost.json  model.json  track.json  track_processed.json
C++/Plotting/: plotting.cpp  plotting.h
C++/Spline/: arc_length_spline.cpp  arc_length_spline.h  boost_splines.cpp  boost_splines.h  cubic_spline.cpp  cubic_spline.h
C++/Tests/: constratins_test.cpp  constratins_test.h  cost_test.cpp  cost_test.h  model_integrator_test.cpp  model_integrator_test.h  spline_test.cpp  spline_test.h
C++/cmake/: Dependencies.cmake  PrecompiledHeaders.cmake
C++/include/mpcc/: bounds.h  config.h  constraints.h  cost.h  hpipm_interface.h  integrator.h  model.h  mpc.h  params.h  solver_interface.h  types.h
C++/params/: bounds.json  config.json  cost.json  model.json  normalization.json
C++/src/: bounds.cpp  constraints.cpp  cost.cpp  hpipm_interface.cpp  integrator.cpp  model.cpp  mpc.cpp  params.cpp  solver_interface.cpp  types.cpp
C++/tests/: constraints_test.cpp  cost_test.cpp  model_test.cpp
C++/visualization/: index.html
